# mubbles

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  devlog.md  index.html  stream.py  transcribe-file.py  transcribe-microphone.py  transcribe-speakers.py
.cargo/: config.toml
.github/: copilot-instructions.md
.github/prompts/: refactor.prompt.md
.github/workflows/: pages.yml
assets/: sw.js
doc/: dual_audio_streams_refactor.md  implement_find_alignment.md  overview.md  silero_vad_todo.md  tasks.md  timing.md
experiment/: Cargo.toml
experiment/src/: main.rs  mel3.rs
src/: app.rs  audio.rs  huggingface.rs  lib.rs  main.rs  mel.rs  mel2.rs  multilingual.rs  partial.rs  summary.rs  voice_detect.rs  whisper.rs  whisper_model.rs  whisper_word_align.py  whisper_word_align.rs
src/whisper/: audio.rs  candle_example.rs  mod.rs  transcribe.rs  whisper.rs
