[package]
name = "mubbles"
version = "1.4.0"
authors = ["Jonathan Newnham"]
edition = "2021"
rust-version = "1.65"

[features]
accelerate = ["accelerate-src"]
mkl = ["intel-mkl-src"]


[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
cpal = "0.15.2"
rubato = "0.14.1"
whisper-rs = { version = "0.8.0", features = ["test-with-tiny-model"] }
dirs = "5.0.1"
image = { version = "0.24.6", default_features = false, features = ["png"] }
winput = "0.2.5"
wasapi = "0.13.0"
rolling-file = "0.2.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
chrono = "0.4.26"
egui_plot = "0.23.0"
open = "5.0.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
intel-mkl-src = { version = "0.8.1", optional = true }
accelerate-src = { version = "0.3.2", optional = true }
candle-nn = "0.3.0"
hf-hub = "0.3.2"
rand = "0.8.5"
tokenizers = "0.14.1"
candle = "0.0.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["json"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }


# whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "master" }
