[package]
name = "mubbles"
version = "2.0.0"
authors = ["Jonathan Newnham"]
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.107"

cpal = "0.15.2"
rubato = "0.15.0"
dirs = "5.0.1"
image = { version = "0.25.1", default-features = false, features = ["png"] }
winput = "0.2.5"
wasapi = "0.15.0"
rolling-file = "0.2.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
chrono = "0.4.26"
egui_plot = "0.28.1"
open = "5.0.0"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
anyhow = "1.0.75"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2