[package]
name = "mubbles"
version = "2.0.0"
authors = ["Jonathan Newnham"]
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

cpal = "0.15.3"
rubato = "0.16.2"
dirs = "6.0.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
winput = "0.2.5"
wasapi = "0.17.0"
rolling-file = "0.2.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
chrono = "0.4.41"
egui_plot = "0.32.1"
open = "5.3.2"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
anyhow = "1.0.98"
byteorder = "1.5.0"
candle-core = { version = "0.9.0", features = ["cuda"] }
candle-transformers = { version = "0.9.0", features = ["cuda"] }
candle-nn = { version = "0.9.0", features = ["cuda"] }
hf-hub = { version = "0.4.2", default-features = false, features = ["ureq", "rustls-tls"] }
rand = "0.9.1"
tokenizers = "0.21.1"
tracing-subscriber = "0.3.19"
rustfft = "6.3.0"



# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
